--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2681,6 +2681,7 @@ a {
     width: 85%;
     text-align: center;
     transition: all .2s ease-in-out;
+    word-break: break-all;
 }
 
 .dcWallet-privateKeyDiv .blurred {
